# dicron

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  build.rs
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml
assets/fonts/: README.md
docs/: RELEASING.md
packaging/arch/: PKGBUILD
packaging/linux/: dicron.desktop
packaging/macos/: Info.plist
packaging/windows/: dicron.nsi
scripts/: build-windows.sh  fetch-fonts.sh  package-macos.sh  package-windows-installer.sh
src/: dialog_directories.rs  main.rs  metadata.rs  metadata_table.rs  release_check.rs  settings.rs  texture.rs  update.rs
src/app/: about_dialog.rs  actions.rs  background_tasks.rs  cache.rs  frame_cache.rs  io.rs  layout.rs  mod.rs  state.rs  tree.rs  viewer.rs
src/app/ui/: dialogs.rs  dicom_tree.rs  main_view.rs  metadata_panel.rs  mod.rs  status_bar.rs  toolbar.rs
src/app/ui/viewer/: controls.rs  image_texture.rs  mod.rs  viewport.rs  window_level.rs
src/dicom/: index.rs  loader.rs  metadata.rs  mod.rs  model.rs  pixels.rs  scan.rs  value.rs
